--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,7 @@
     <dependency>
       <groupId>jakarta.validation</groupId>
       <artifactId>jakarta.validation-api</artifactId>
-      <version>2.0.2.redhat-00001</version>
+      <version>2.0.2</version>
     </dependency>
     <dependency>
       <groupId>org.omnifaces</groupId>
