--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@
       <artifactId>omnifaces</artifactId>
       <version>3.11.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.primefaces.themes</groupId>
+      <artifactId>all-themes</artifactId>
+      <version>1.0.10</version>
+    </dependency>
   </dependencies>
   <build>
     <plugins>
