--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,4 +10,8 @@
     <param-name>primefaces.TRANSFORM_METADATA</param-name>
     <param-value>true</param-value>
   </context-param>
+  <context-param>
+    <param-name>primefaces.THEME</param-name>
+    <param-value>south-street</param-value>
+  </context-param>
 </web-app>
