--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
       <version>1.0.10</version>
     </dependency>
   </dependencies>
+  <repositories>
+    <repository>
+      <id>prime-repo</id>
+      <name>PrimeFaces Maven Repository</name>
+      <url>https://repository.primefaces.org</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
   <build>
     <plugins>
       <plugin>
