adiciona repositório do prime faces themes

--- a/pom.xml
+++ b/pom.xml
@@ -94,4 +94,12 @@
       </plugin>
     </plugins>
   </build>
+  <repositories>
+    <repository>
+      <id>prime-repo</id>
+      <name>PrimeFaces Maven Repository</name>
+      <url>https://repository.primefaces.org</url>
+      <layout>default</layout>
+    </repository>
+  </repositories>
 </project>
